--- a/src/classes/SetIndustryBatch.cls
+++ b/src/classes/SetIndustryBatch.cls
@@ -1,13 +1,13 @@
-@IsTest
 public class SetIndustryBatch extends Chainable {
+
 	String value;
 
 	public SetIndustryBatch(String value) {
 		this.value = value;
 	}
 
-	protected override Iterable<SObject> start(Chainable.Context ctx) {
-		return [SELECT Industry FROM Account];
+	protected override Iterable<Object> start(Chainable.Context ctx) {
+		return cast( [SELECT Industry FROM Account] );
 	}
 
 	protected override void execute(Chainable.Context ctx, Iterable<SObject> scope) {
