--- a/src/classes/AddPhoneBatch.cls
+++ b/src/classes/AddPhoneBatch.cls
@@ -1,11 +1,10 @@
-@IsTest
 public class AddPhoneBatch extends Chainable {
 
-	protected override Iterable<SObject> start(Chainable.Context ctx) {
-		return [SELECT Phone FROM Account];
+	protected override Iterable<Object> start(Chainable.Context ctx) {
+        return cast( [SELECT Phone FROM Account] );
 	}
 
-	protected override void execute(Chainable.Context ctx, Iterable<SObject> scope) {
+	protected override void execute(Chainable.Context ctx, Iterable<Object> scope) {
 		List<Account> accounts = (List<Account>) scope;
 
 		for(Account a : accounts) {
