--- a/src/classes/MultiplyRevenueBatch.cls
+++ b/src/classes/MultiplyRevenueBatch.cls
@@ -1,4 +1,3 @@
-@IsTest
 public class MultiplyRevenueBatch extends Chainable {
 
 	private Decimal multiplier;
@@ -7,11 +6,11 @@ public class MultiplyRevenueBatch extends Chainable {
 		this.multiplier = multiplier;
 	}
 
-	protected override Iterable<SObject> start(Chainable.Context ctx) {
-		return [SELECT AnnualRevenue FROM Account];
+	protected override Iterable<Object> start(Chainable.Context ctx) {
+		return (Iterable<Object>) [SELECT AnnualRevenue FROM Account];
 	}
 
-	protected override void execute(Chainable.Context ctx, Iterable<SObject> scope) {
+	protected override void execute(Chainable.Context ctx, Iterable<Object> scope) {
 		List<Account> accounts = (List<Account>) scope;
 
 		for(Account a : accounts) {
