Added shared variables for chain members

--- a/force-app/main/default/classes/Chainable.cls
+++ b/force-app/main/default/classes/Chainable.cls
@@ -1,13 +1,15 @@
 public abstract class Chainable {
 
+	private Chainable previous;
 	private Chainable next;
-	private Boolean synchronouslyInTests = false;
+
+	private Map<String, Object> sharedVariables = new Map<String, Object>();
 
 
 	// ABSTRACT
 
 	protected abstract void executeAsynchronously();
-	protected abstract void executeSynchronously();
+	protected abstract void executeSynchronously(Context ctx);
 
 	
 	// PUBLIC
@@ -18,33 +20,44 @@ public abstract class Chainable {
 		}
 		else {
 			next = successor;
+			next.previous = this;
+			
+			next.sharedVariables = sharedVariables;
 		}
 
 		return this;
 	}
 
 
-	public Chainable synchronouslyInTests() {
-		synchronouslyInTests = true;
-		return this;
-	}
-
-
-	public void execute() {
-		if(Test.isRunningTest() && synchronouslyInTests) {
-			executeSynchronously();
+	public Chainable execute() {
+		if(Test.isRunningTest()) {
+			executeSynchronously(new Context());
 			executeNext();
 		}
 		else {
 			executeAsynchronously();
 		}
+
+		return this;
 	}
+
+
+    public Chainable setShared(String key, Object value) {
+        sharedVariables.put(key, value);
+
+		return this;
+    }
+
+
+    public Object getShared(String key) {
+        return sharedVariables.get(key);
+    }
+
 	
 	// PROTECTED
-	
+
 	protected void executeNext() {
 		if(next != null) {
-			next.synchronouslyInTests = synchronouslyInTests;
 			next.execute();
 		}
 	}
@@ -54,24 +67,24 @@ public abstract class Chainable {
 
 	public class Context {
 
-		private Object original;
+		private Object originalContext;
 
 		public Context() {}
 
 		public Context(Database.BatchableContext ctx) {
-			original = ctx;
+			originalContext = ctx;
 		}
 
 		public Context(QueueableContext ctx) {
-			original = ctx;
+			originalContext = ctx;
 		}
 
 		public Context(SchedulableContext ctx) {
-			original = ctx;
+			originalContext = ctx;
 		}
 
-		public Object getOriginal() {
-			return original;
+		public Object get() {
+			return originalContext;
 		}
 	}
 }
