Better unify into lib

--- a/force-app/main/default/classes/Chainable.cls
+++ b/force-app/main/default/classes/Chainable.cls
@@ -1,5 +1,8 @@
 public abstract class Chainable {
 
+	@TestVisible
+    private static final String INVALID_CLASS_MSG = 'Invalid class ';
+	
 	private Chainable previous;
 	private Chainable next;
 
@@ -14,10 +17,10 @@ public abstract class Chainable {
 	
 	// VIRTUAL
 
-	public virtual void setDeferredArgs(String serializedArgs) {}
+	protected virtual void setDeferredArgs(String serializedArgs) {}
 
 	
-	public virtual void setDeferredShared(String serializedShared) {
+	protected virtual void setDeferredShared(String serializedShared) {
 		Map<String, Object> hydratedShared = (Map<String, Object>)JSON.deserializeUntyped(serializedShared);
 		for(String key : hydratedShared.keySet()) {
 			setShared(key, hydratedShared.get(key));
@@ -35,11 +38,43 @@ public abstract class Chainable {
 	}
 
 
-	protected virtual void handleDeferException(Exception e) {
+	private virtual void handleDeferException(Exception e) {
 		throw e;
 	}
 
 	// PUBLIC
+
+
+	@InvocableMethod(label='Rebuild chain from deferred chainables and execute')
+    public static List<DeferRebuildResult> rebuildAndExecuteChain(List<DeferredChainLink> deferredLinks) {
+        Chainable chain;
+        Chainable iteratingInstance;
+
+        List<DeferRebuildResult> results = new List<DeferRebuildResult>();
+
+        for(DeferredChainLink deferredLink : deferredLinks) {
+
+            try {
+                iteratingInstance = deferredLink.getLinkableInstance();
+                
+                if(chain == null) {
+                    chain = iteratingInstance;
+                } 
+                else {
+                    chain.then(iteratingInstance);
+                }
+                results.add(new DeferRebuildResult());
+            }
+            catch(Exception e) {
+                results.add(new DeferRebuildResult(e.getMessage()));
+            }
+        }
+
+        chain?.execute();
+
+        return results;
+    }
+
 
 	public Chainable then(Chainable successor) {
 		if(next != null) {
@@ -81,9 +116,9 @@ public abstract class Chainable {
     }
 
 
-	public Chainable defer() {
+	public Chainable executeDeferred() {
 
-		List<ChainableDeferredEvent__e> deferEvents = unlink();
+		List<Chainable__e> deferEvents = unlink();
 
 		if(Limits.getLimitDMLStatements() < deferEvents.size()) {
 			handleDeferException(new DeferLimitException());
@@ -98,13 +133,13 @@ public abstract class Chainable {
 		return this;
     }
 
+	@TestVisible
+	private List<Chainable__e> unlink() {
 
-	public List<ChainableDeferredEvent__e> unlink() {
-
-		List<ChainableDeferredEvent__e> deferEvents = new List<ChainableDeferredEvent__e>();
+		List<Chainable__e> deferEvents = new List<Chainable__e>();
 
 		try {
-			deferEvents.add(new ChainableDeferredEvent__e(
+			deferEvents.add(new Chainable__e(
 				InstanceName__c = String.valueOf(this).substringBefore(':'), 
 				Arguments__c = getDeferArgs(),
 				Shared__c = getDeferShared()
@@ -157,9 +192,55 @@ public abstract class Chainable {
 		}
 	}
 
+	public class DeferredChainLink {
+
+        @InvocableVariable(required=true)
+        public Chainable__e deferEvent;
+
+        public Chainable getLinkableInstance() {
+            Chainable linkableInstance;
+
+            Type jobType = Type.forName(deferEvent.InstanceName__c);
+
+            if(jobType != null && Chainable.class.isAssignableFrom(jobType)) {
+                
+                linkableInstance = (Chainable)jobType.newInstance();
+                linkableInstance.setDeferredShared(deferEvent.Shared__c);
+                if(String.isNotBlank(deferEvent.Arguments__c)) {
+                    linkableInstance.setDeferredArgs(deferEvent.Arguments__c);
+                }
+            }
+            else {
+                throw new DeferredIsNotChainableException(INVALID_CLASS_MSG + deferEvent.InstanceName__c);
+            }
+
+            return linkableInstance;
+        }
+    }
+
+	
+	public class DeferRebuildResult {
+
+        @InvocableVariable
+        public Boolean success;
+
+        @InvocableVariable
+        public String error;
+
+        public DeferRebuildResult() {
+            success = true;
+        }
+
+        public DeferRebuildResult(String errorDetail) {
+            success = false;
+            error = errorDetail;
+        }
+    }
+
 
 	public class DeferLimitException extends Exception {}
 	public class DeferUnlinkException extends Exception {}
+	public class DeferredIsNotChainableException extends Exception {}
 	public class DeferPublishException extends Exception {
 		public DeferPublishException(List<Database.Error> publishErrors) {
 			List<String> messages = new List<String>();
